memory parents to reduce index footprint in profile
